--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Posts#new</h1>
+<form method="post" action="miaccion">
+<input type="text">
+<input type="submit">
+
+<form>
 <p>Find me in app/views/posts/new.html.erb</p>
+ 
